docs/src/assets/styles/core/_objects.scss
// ICONS -------------------------------------

svg {
  display: block;
}

.icon-svg {
  --iconColor: white;
  overflow: visible;
  transition: .2s $ease-out-quad;
  transition-property: fill, stroke;
}


// EXAMPLES -------------------------------------

.example-wrap {
  perspective: 200px;
}

.square {
	@include size(5rem);
	background-color: $cyan;
  border-radius: $br-l;
}

.square-group {
  display: flex;
  align-items: center;
  justify-content: space-around;
  width: 24rem;
  max-width: 100%;
}

.square-block {
  @include size(5rem);
  border: 2px solid $cyan;
	border-radius: $br-l;
  margin: $sp-s;
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr 1fr;
  grid-gap: .5rem;
  padding: .5rem;

  .square {
    @include size(100%);
    border-radius: $br-m;
    margin: auto;
  }
}

